--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ http://www.templatemo.com/tm-506-tinker
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#" class="scroll-top">Home</a></li>
-                        <li><a href="#" class="scroll-link" data-id="about">About Us</a></li>
+                        <li><a href="about.html" class="scroll-link" data-id="about">About Us</a></li>
                         <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
                         <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li>
                         <li><a href="#" class="scroll-link" data-id="contact-me">Contact Us</a></li>
@@ -62,74 +62,14 @@ http://www.templatemo.com/tm-506-tinker
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="text-content">
-                <h2>Awesome <span>HTML5</span> Template <em>TINKER</em></h2>
-                <p>Phasellus aliquam finibus est, id tincidunt mauris fermentum a. In elementum diam et dui congue, ultrices bibendum mi lacinia. Aliquam lobortis dapibus nunc, nec tempus odio posuere quis. </p>
+                <h2>Cheryl's <span>Projects</span></h2>
+                <p>Jack of all trades, master of none. Professional dabbler in all things strange and unconventional. Find out more about what I'm working on <a href="https://github.com/Yoshi275/team-treehouse-projects">here</a>></p>
                 <div class="primary-white-button">
-                    <a href="#" class="scroll-link" data-id="about">Let's Start</a>
+                    <a href="#" class="scroll-link" data-id="about">Meaning of Life</a>
                 </div>
             </div>
         </div>
     </div>
-
-
-    <section id="about" class="page-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="service-item">
-                        <div class="icon">
-                            <img src="img/service_icon_01.png" alt="">
-                        </div>
-                        <h4>Smart Alerts Updated</h4>
-                        <div class="line-dec"></div>
-                        <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
-                        <div class="primary-blue-button">
-                            <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="service-item">
-                        <div class="icon">
-                            <img src="img/service_icon_02.png" alt="">
-                        </div>
-                        <h4>Lovely HTML5 Layout</h4>
-                        <div class="line-dec"></div>
-                        <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
-                        <div class="primary-blue-button">
-                            <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="service-item">
-                        <div class="icon">
-                            <img src="img/service_icon_03.png" alt="">
-                        </div>
-                        <h4>Always CSS Ready</h4>
-                        <div class="line-dec"></div>
-                        <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
-                        <div class="primary-blue-button">
-                            <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="service-item">
-                        <div class="icon">
-                            <img src="img/service_icon_04.png" alt="">
-                        </div>
-                        <h4>One-Click Install</h4>
-                        <div class="line-dec"></div>
-                        <p>Integer hendrerit vehicula mauris, sed pellentesque sem facilisis at. Aliquam vel arcu metus. Nam sem lectus, mattis non tellus et, tincidunt condimentum eros.</p>
-                        <div class="primary-blue-button">
-                            <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section id="portfolio">
         <div class="content-wrapper">
