--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ http://www.templatemo.com/tm-506-tinker
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#" class="scroll-top">Home</a></li>
-                        <li><a href="about.html" class="scroll-link" data-id="about">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
                         <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li>
                         <li><a href="#" class="scroll-link" data-id="contact-me">Contact Us</a></li>
